xử lý database và 2 static file

--- a/demo-routing/views/products/add.html
+++ b/demo-routing/views/products/add.html
@@ -12,6 +12,9 @@
         <input type="tex" name="nameProduct">
         <input type="text" name="image">
         <input type="text" name="price">
+        <select name="idCategory">
+            {listCategory}
+        </select>
         <button>Submit</button>
     </form>
 </body>
