--- a/demo-routing/views/products/home.html
+++ b/demo-routing/views/products/home.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 <body>
     <a href="/products/add">Add Product</a>
+    <img src="/style/logo.png" alt="">
     <h1>Home</h1>
     <table border="1">
         <tr>
             <td>ID</td>
             <td>Name</td>
             <td>Image</td>
+            <td>Category</td>
             <td colspan="2">Action</td>
         </tr>
         {list}
